# DelugeFirmware

./: CMakeLists.txt
docs/menus/compressor/: sidechain_listen.md
lib/: CMakeLists.txt
src/: definitions.h  definitions_cxx.hpp  terminate.cpp
src/OSLikeStuff/: CMakeLists.txt
src/OSLikeStuff/fault_handler/: fault_handler.c
src/OSLikeStuff/freertos/: FreeRTOSConfig.h  freertos_app.cpp  freertos_mutex.cpp  freertos_mutex.h  freertos_tick_setup.c
src/OSLikeStuff/task_scheduler/: resource_checker.h
src/RZA1/: CMakeLists.txt  diskio.c
src/RZA1/cache/: cache.c  cache.h
src/RZA1/compiler/asm/: start.S
src/deluge/: deluge.cpp  deluge.h  extern.h
src/deluge/gui/: ui_timer_manager.cpp
src/deluge/hid/: hid_sysex.cpp
src/deluge/memory/: external_allocator.h  fast_allocator.h  general_memory_allocator.cpp  general_memory_allocator.h  general_memory_allocator_freertos.cpp  memory_allocator_interface.cpp  memory_allocator_interface.h  memory_region.cpp  object_pool.h  operators.cpp  sdram_allocator.h
src/deluge/model/: model_stack.cpp  output.cpp
src/deluge/modulation/: arpeggiator.cpp  arpeggiator.h
src/deluge/playback/: playback_handler.cpp  playback_handler.h
src/deluge/processing/: audio_output.cpp
src/deluge/storage/: Deserializer.cpp  JSONSerializer.cpp  JsonDeserializer.cpp  Serializer.cpp  smsysex.cpp  song_loader.cpp  song_loader.h  storage_manager.cpp  storage_task.cpp  storage_task.h
src/deluge/util/: d_string.cpp
src/fatfs/: CMakeLists.txt  ff.h  ffconf.h  ffsystem.c
tests/unit/: scheduler_tests.cpp
tests/unit/mocks/: clip_mocks.h
(+122 files in other folders)
